Card class fixes